# qt-calculator-cpp

./: .gitignore  CMakeLists.txt  README.md  report.md  task.md  tasks.md  Отчет.docx
ref/: main (1).cpp
report/: code_listing_guide.md  design_principles.md  вывод.md  принципы-проектирования.md
report/flowcharts/: 01_compute.tex  02_tokenize.tex  03_to_rpn.tex  04_evaluate.tex
report/НЕ ДЛЯ ОТЧЕТА ( code )/: 01_main.tex  02_parse_expression.tex  03_parse_term.tex  04_parse_factor.tex  05_apply_function.tex  06_parse_number.tex  07_compute.tex  08_keypress.tex  09_format_result.tex  README.md  _preamble.tex
report/НЕ ДЛЯ ОТЧЕТА (блок схема) /: 01_compute.tex  02_parse.tex  03_parse_expression_term.tex  04_parse_factor.tex
src/: Evaluator.cpp  Evaluator.h  MainWindow.cpp  MainWindow.h  Parser.cpp  Parser.h  evaluator.cpp  evaluator.h  main.cpp  main_window.cpp  main_window.h  parser.cpp  parser.h
src/eval/: eval_error.h  evaluator.cpp  evaluator.h  functions.cpp  functions.h  operators.cpp  operators.h
src/parser/: parse_error.h  parser.h  shunting_yard.cpp  shunting_yard.h  token.h  tokenizer.cpp  tokenizer.h
src/ui/: button_layout.cpp  button_layout.h  format.cpp  format.h  main_window.cpp  main_window.h  theme.cpp  theme.h
tests/: parser_tests.cpp
